--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cards {
+  --height: 20rem;
+
+  height: var(--height);
+  position: relative;
+}
+
+.card {
+  width: var(--height);
+  height: 10rem;
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  color: white;
+  font-size: 2rem;
+}
+
+.shrink {
+  animation: shrink 0.25s ease-in-out;
+}
+
+.grow {
+  animation: grow 0.25s ease-in-out;
+}
+
+@keyframes shrink {
+  0% {
+    transform: translate(0, -50%) scale(1);
+  }
+  100% {
+    transform: translate(-100%, -50%) scale(0);
+  }
+}
+
+@keyframes grow {
+  0% {
+    transform: translateY(-50%) scale(0);
+  }
+  100% {
+    transform: translateY(-50%) scale(1);
+  }
 }
