--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,15 @@
 }
 
 .cards {
-  --height: 20rem;
-
-  height: var(--height);
-  position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .card {
-  width: var(--height);
-  height: 10rem;
-  position: absolute;
-  transform: translateY(-50%);
+  --shift: calc(var(--pos) * -50%);
+  width: 20rem;
+  height: var(--height);
+  transform: translateX(var(--shift));
   top: 50%;
   color: white;
   font-size: 2rem;
@@ -29,20 +27,46 @@
   animation: grow 0.25s ease-in-out;
 }
 
+.slide-left {
+  animation: slide-left 0.25s ease-in-out;
+}
+
+.slide-right {
+  animation: slide-right 0.25s ease-in-out;
+}
+
 @keyframes shrink {
   0% {
-    transform: translate(0, -50%) scale(1);
+    transform: translateX(var(--shift)) scale(1);
   }
   100% {
-    transform: translate(-100%, -50%) scale(0);
+    transform: translateX(calc(var(--shift) - 100%)) scale(0);
   }
 }
 
 @keyframes grow {
   0% {
-    transform: translateY(-50%) scale(0);
+    transform: translateX(calc(var(--shift) - 100%)) scale(0);
   }
   100% {
-    transform: translateY(-50%) scale(1);
+    transform: translateX(var(--shift)) scale(1);
+  }
+}
+
+@keyframes slide-left {
+  0% {
+    transform: translateX(calc(var(--shift) - 100%));
+  }
+  100% {
+    transform: translateX(var(--shift));
+  }
+}
+
+@keyframes slide-right {
+  0% {
+    transform: translateX(var(--shift));
+  }
+  100% {
+    transform: translateX(calc(var(--shift) - 100%));
   }
 }
